# warp-projects

./: .gitignore  CLAUDE.md  README.md  requirements-linux.txt  setup_linux.sh
projects/warpfluids/: CLAUDE.md  README.md  build_deck.py  pyproject.toml
projects/warpfluids/benchmarks/: bench_jxf_fair_extended.py  plot_warp_vs_jxf.py
projects/warpfluids/benchmarks/shu_osher/: bench_cuda_graph.py  bench_precision.py  convergence_study.py  cuda_graph_benchmark.csv
projects/warpfluids/benchmarks/sod/: bench_cuda_graph.py  bench_precision.py  convergence.csv  convergence_study.py
projects/warpfluids/cases/: __init__.py  shu_osher.py  sod.py
projects/warpfluids/tests/: conftest.py  test_conservation.py  test_hllc.py  test_primitives.py  test_sod.py  test_weno3.py
projects/warpfluids/warpfluids/: solver.py
projects/warpfluids/warpfluids/kernels/: __init__.py
projects/warplabs_fluids/: README.md  build_deck.py  pyproject.toml
projects/warplabs_fluids/benchmarks/: .gitignore  bench_jxf_fair_extended.py  plot_warp_vs_jxf.py
projects/warplabs_fluids/benchmarks/shu_osher/: bench_cuda_graph.py  convergence.csv
projects/warplabs_fluids/benchmarks/sod/: bench_cuda_graph.py  bench_precision.py  convergence_study.py
projects/warplabs_fluids/cases/: shu_osher.py  sod.py
projects/warplabs_fluids/tests/: test_conservation.py  test_hllc.py  test_primitives.py  test_sod.py  test_weno3.py
projects/warplabs_fluids/warplabs_fluids/: __init__.py  utils.py
projects/warplabs_fluids/warplabs_fluids/kernels/: bc.py  flux.py  fused_step.py  primitives.py  reconstruct.py  (+2 more)
(+50 files in other folders)
