[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "warpfluids"
version = "0.1.0"
description = "Experimental Warp-native compressible flow solver"
requires-python = ">=3.10"
dependencies = [
    "warp-lang",
    "numpy",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["warpfluids*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
