[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "warplabs-fluids"
version = "0.1.0"
description = "Experimental Warp-native compressible flow solver"
requires-python = ">=3.10"
dependencies = [
    "warp-lang",
    "numpy",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["warplabs_fluids*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
